# onlineweb4

./: .drone.yml  .editorconfig  Dockerfile.prod  Dockerfile.testbase  README.md  entrypoint.sh  package-lock.json  pyproject.toml  requirements.txt  webpack.config.js
apps/article/dashboard/: views.py
apps/authentication/migrations/: 0027_merge_20180112_1241.py
apps/gallery/: settings.py  widgets.py
assets/photoalbum/: index.js  photo.js
onlineweb4/: urls.py
onlineweb4/settings/: base.py  django.py
templates/: base.html  dashboard_base.html  frontpage.html
templates/photoalbum/: index.html  photo.html
